--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         
         <p>7. Changes to Privacy Policy<br>
         We may update this Privacy Policy to reflect changes to our information practices. If we make any material changes, we will notify you by updating this page. We encourage you to periodically review this page for the latest information on our privacy practices.</p>
+        <p>8. End User License Agreement (EULA)<br>
+        For details regarding the terms of use of the App, please review Apple's <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" target="_blank">Standard End User License Agreement (EULA)</a>.</p>
+
     </section>
 </body>
 </html>
