--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to VocaPal Support</h1>
-    <p>If you have any questions or need help, please contact us at <a href="mailto:support@vocapal.com">support@vocapal.com</a>.</p>
+    <p>If you have any questions or need help, please contact us at <a href="mailto:vincent.zhong@icloud.com">vincent.zhong@icloud.com</a>.</p>
 
     <!-- Privacy Policy Section -->
     <section id="privacy-policy">
